--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
-<html>
-    <head>
-        <!-- meta data -->
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sleeptime</title>
-        <style>
-            body{
-                text-align: center;
-                color:aliceblue;
-                background-color: darkblue;
-            }
-
-            .output{
-                border:3px solid white;
-
-            }
-        </style>
-    </head>
-    <body>
-    <h1>Sleeptime App</h1>
-    <p>If you go to bed NOW, you should wake up at...</p>
-    <button onclick="handleOnClick();">zzz</button>
-    <div class="output">
-        <p>It takes the average human 14 minutes to fall sleep.</p>
-        <p>
-            If you head to bed right now, you should try to wake up at one of the
-            following times:
-        </p>
-        <p id="hours">
-            12:15 AM<br />
-            1:45 AM<br />
-            3:15 AM<br />
-            4:45 AM<br />
-            6:15 AM<br />
-            7:45 AM
-        </p>
-        <p>A good night's sleep consists of 5-6 complete sleep cycles.</p>
-    </div>
-    <script src="script.js"></script>
-    </body>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Sleeptime App</h1>
+<p>If you go to bed NOW, you should wake up at...</p>
+<button onclick="handleOnClick();">zzz</button>
+<div class="output">
+    <p>It takes the average human 14 minutes to fall sleep.</p>
+    <p>
+        If you head to bed right now, you should try to wake up at one of the
+        following times:
+    </p>
+    <p id="hours">
+        12:15 AM<br />
+        1:45 AM<br />
+        3:15 AM<br />
+        4:45 AM<br />
+        6:15 AM<br />
+        7:45 AM
+    </p>
+    <p>A good night's sleep consists of 5-6 complete sleep cycles.</p>
+</div>
+<script src="script.js"></script>
+</body>
 </html>
